--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ const STATE = {
 };
 
 // ======================= UTILS =======================
-const JOIN_KEYS = ['Cod Empresa','CodEmpresa','Cod_Empresa','codigo_empresa','codigo','CodEmp','CodEmpresaId'];
+const JOIN_KEYS = ['Cod Empresa','CodEmpresa','Cod_Empresa','codigo_empresa','codigo','CodEmp','CodEmpresaId','codigo_npg','Codigo NPG','Codigo_NPG','CODIGO_NPG'];
 function norm(v){ return (v??'').toString().trim().toLowerCase(); }
 function stripAccents(s){ return (s??'').toString().normalize('NFD').replace(/[\u0300-\u036f]/g,''); }
 function normName(s){ return stripAccents(String(s||'')).trim().toLowerCase(); }
@@ -2884,7 +2884,7 @@ document.addEventListener('click', (ev)=>{
     return '';
   }
   function getCallVend(rec){ return get(rec, ['Vendedor','vendedor']); }
-  function getCallGestor(rec){ return get(rec, ['gestor_servicio','Gestor','gestor']); }
+  function getCallGestor(rec){ return get(rec, ['gestor_servicio','Gestor','gestor','gestor_cartera','Gestor cartera','gcartera']); }
   function getCallFecha(rec){ return toDate(get(rec, ['Fecha/Hora','Fecha','fecha','FechaHora','fecha_hora'])); }
 
   function buildResumenFilters(){
@@ -3332,9 +3332,9 @@ document.addEventListener('click', (ev)=>{
 
     // PLAN desde Calendario
     cal.forEach(r=>{
-      const wk   = mapPlanWeek(r['SEMANA']||r['Semana']||r['semana']||'');
+      const wk = mapPlanWeek(r['N Semana']||r['N_Semana']||r['NSemana']||r['SEMANA']||r['Semana']||r['semana']||'');
       const vend = r['vendedor']||r['Vendedor']||r['VENDEDOR']||'';
-      const ges  = r['gestor_servicio']||r['Gestor']||r['GESTOR_SERVICIO']||'';
+      const ges  = r['gestor_servicio']||r['Gestor']||r['GESTOR_SERVICIO']||r['Gestor cartera']||r['gestor_cartera']||r['gcartera']||'';
       if(fSem && String(wk)!==String(fSem)) return;
       if(fVend && normName(vend)!==fVendN)   return;
       if(fGes && normName(ges)!==fGesN)      return;
@@ -3783,268 +3783,5 @@ document.addEventListener('click', (ev)=>{
 })();
 
 </script>
-
-<script>
-
-// === Resumen (Sem) Controller — SAFE (no eliminación de botones) ===
-
-// Utilidad: formateo y %
-function pct(num, den){
-  const n = Number(num)||0, d = Number(den)||0;
-  if(d<=0) return '0%';
-  return Math.round(n*100/d) + '%';
-}
-function sum(arr, f){ return arr.reduce((a,b)=>a+(f?f(b):b),0); }
-function normStr(s){ return (s??'').toString().trim(); }
-
-function ensureResumenFilters(){
-  try{
-    const vendSel = document.getElementById('rwVendedor');
-    const gestSel = document.getElementById('rwGestor');
-    if(!vendSel || !gestSel || !window.STATE || !Array.isArray(STATE.joined)) return;
-
-    const vendors = Array.from(new Set(STATE.joined.map(x=>x.vendedor).filter(Boolean))).sort((a,b)=>String(a).localeCompare(String(b),'es',{numeric:true}));
-    const gestors = Array.from(new Set(STATE.joined.map(x=>x.gestor).filter(Boolean))).sort((a,b)=>String(a).localeCompare(String(b),'es',{numeric:true}));
-
-    const mkOpts = (arr, allLabel) => ['<option value="">'+allLabel+'</option>'].concat(arr.map(v=>'<option>'+String(v)+'</option>')).join('');
-
-    if(vendSel && vendSel.dataset.filled!=='1'){
-      vendSel.innerHTML = mkOpts(vendors, 'Todos');
-      vendSel.dataset.filled = '1';
-    }
-    if(gestSel && gestSel.dataset.filled!=='1'){
-      gestSel.innerHTML = mkOpts(gestors, 'Todos');
-      gestSel.dataset.filled = '1';
-    }
-  }catch(_){}
-}
-
-function resumenFilters(){
-  const semana = document.getElementById('rwSemana')?.value || '';
-  const vendedor = document.getElementById('rwVendedor')?.value || '';
-  const gestor = document.getElementById('rwGestor')?.value || '';
-  return { semana, vendedor, gestor };
-}
-
-// PLAN desde STATE.joined (itinerarios reales)
-function planRows(){
-  if(!Array.isArray(STATE.joined)) return [];
-  return STATE.joined.map(x=> ({
-    gestor: normStr(x.gestor),
-    vendedor: normStr(x.vendedor),
-    semana: normStr(x.semana),
-    cod: normStr(x.cod),
-    cliente: normStr(x.nombre),
-    empresa: normStr(x.empresa),
-  }));
-}
-
-// LLAMADAS realizadas (agrupables)
-function callsRows(){
-  const list = (typeof loadAllCallRecords==='function') ? loadAllCallRecords() : [];
-  return list.map(r=>({
-    gestor: normStr(r.gestor_servicio||r.gestor||''),
-    vendedor: normStr(r.vendedor||''),
-    semana: normStr(r.semana||''),
-    cod: normStr(r.cod_empresa||''),
-    cliente: normStr(r.cliente||''),
-    fecha_hora: normStr(r.fecha_hora||''),
-  }));
-}
-
-// Filtros aplicados a colecciones
-function applyResumenFilter(rows){
-  const {semana, vendedor, gestor} = resumenFilters();
-  return rows.filter(r=>{
-    if(semana && String(r.semana)!==String(semana)) return false;
-    if(vendedor && String(r.vendedor)!==String(vendedor)) return false;
-    if(gestor && String(r.gestor)!==String(gestor)) return false;
-    return true;
-  });
-}
-
-// Compute KPI + tablas
-function computeResumen(){
-  const plan = applyResumenFilter(planRows());     // itinerarios
-  const done = applyResumenFilter(callsRows());    // llamadas realizadas
-
-  // KPI totals
-  const planTot = plan.length;
-  const doneTot = done.length;
-  const covTot  = (planTot>0) ? Math.round(doneTot*100/planTot)+'%' : '0%';
-
-  // Tabla por Gestor + Semana (4 semanas)
-  const keyGS = (g,s)=> g+'||'+s;
-  const planByGS = new Map();
-  const doneByGS = new Map();
-  const lastByGS = new Map();
-
-  plan.forEach(p=>{
-    const k = keyGS(p.gestor, p.semana);
-    planByGS.set(k, (planByGS.get(k)||0) + 1);
-  });
-  done.forEach(d=>{
-    const k = keyGS(d.gestor, d.semana);
-    doneByGS.set(k, (doneByGS.get(k)||0) + 1);
-    const fh = d.fecha_hora;
-    if(fh){
-      const cur = lastByGS.get(k);
-      if(!cur || new Date(fh) > new Date(cur)) lastByGS.set(k, fh);
-    }
-  });
-
-  const keys = new Set([...planByGS.keys(), ...doneByGS.keys()]);
-  const resumenRows = Array.from(keys).map(k=>{
-    const [gestor, semana] = k.split('||');
-    const a = planByGS.get(k)||0;
-    const r = doneByGS.get(k)||0;
-    return {gestor, semana, plan:a, done:r, cov: pct(r,a), last: lastByGS.get(k)||''};
-  }).sort((a,b)=> String(a.gestor).localeCompare(String(b.gestor),'es',{numeric:true}) || Number(a.semana)-Number(b.semana));
-
-  // Tabla de clientes (detalle plan vs realizadas)
-  // Unimos plan por cliente con calls por cliente (múltiples)
-  const doneByCod = new Map();
-  const lastByCod = new Map();
-  done.forEach(d=>{
-    const k = d.cod+'||'+d.semana;
-    doneByCod.set(k, (doneByCod.get(k)||0) + 1);
-    const fh = d.fecha_hora;
-    if(fh){
-      const cur = lastByCod.get(k);
-      if(!cur || new Date(fh) > new Date(cur)) lastByCod.set(k, fh);
-    }
-  });
-
-  const detalle = plan.map(p=>{
-    const k = p.cod+'||'+p.semana;
-    return {
-      cliente: p.cliente,
-      cod: p.cod,
-      vendedor: p.vendedor,
-      gestor: p.gestor,
-      realizadas: doneByCod.get(k)||0,
-      last: lastByCod.get(k)||''
-    };
-  }).sort((a,b)=> String(a.cliente).localeCompare(String(b.cliente),'es',{numeric:true}));
-
-  return { planTot, doneTot, covTot, resumenRows, detalle };
-}
-
-function renderResumenSem(){
-  ensureResumenFilters();
-  const R = computeResumen();
-
-  // KPIs
-  const ids = ['kpiPlan','kpiDone','kpiCov','rwPlan','rwDone','rwCov'];
-  const vals = [R.planTot, R.doneTot, R.covTot, R.planTot, R.doneTot, R.covTot];
-  ids.forEach((id,i)=>{ const el=document.getElementById(id); if(el) el.textContent = vals[i]; });
-
-  // Tabla Gestor+Semana
-  const tb = document.querySelector('#rwTbl tbody');
-  if(tb){
-    tb.innerHTML='';
-    R.resumenRows.forEach(r=>{
-      const tr = document.createElement('tr');
-      tr.innerHTML = '<td>'+ (r.gestor||'') +'</td>'+
-                     '<td>'+ (r.semana||'') +'</td>'+
-                     '<td>'+ (r.plan||0) +'</td>'+
-                     '<td>'+ (r.done||0) +'</td>'+
-                     '<td>'+ (r.cov||'0%') +'</td>'+
-                     '<td>'+ (r.last||'') +'</td>';
-      tb.appendChild(tr);
-    });
-  }
-
-  // Detalle de clientes (si existe contenedor superior, lo llenamos)
-  const detWrap = document.getElementById('repDetalleWrap');
-  // Conservamos el reporte original, pero si existe una tabla #rwClientsTbl la rellenamos
-  let detTbl = document.getElementById('rwClientsTbl');
-  if(!detTbl){
-    // Crear una tabla de clientes mínima si no existía
-    const host = document.getElementById('screenResumenSem');
-    if(host){
-      const holder = document.createElement('div');
-      holder.style.cssText = 'margin:8px 0; max-height:50vh; overflow:auto; border-radius:12px;';
-      holder.innerHTML = '<table class="table" id="rwClientsTbl"><thead><tr>'+
-        '<th>Cliente</th><th>Cod</th><th>Vendedor</th><th>Gestor</th><th>Realizadas</th><th>Última llamada</th>'+
-        '</tr></thead><tbody></tbody></table>';
-      host.querySelector('.card')?.appendChild(holder);
-      detTbl = holder.querySelector('#rwClientsTbl');
-    }
-  }
-  if(detTbl){
-    const body = detTbl.querySelector('tbody');
-    body.innerHTML='';
-    R.detalle.forEach(r=>{
-      const tr = document.createElement('tr');
-      tr.innerHTML = '<td>'+ (r.cliente||'') +'</td>'+
-                     '<td>'+ (r.cod||'') +'</td>'+
-                     '<td>'+ (r.vendedor||'') +'</td>'+
-                     '<td>'+ (r.gestor||'') +'</td>'+
-                     '<td>'+ (r.realizadas||0) +'</td>'+
-                     '<td>'+ (r.last||'') +'</td>';
-      body.appendChild(tr);
-    });
-  }
-
-  // Info
-  const {semana, vendedor, gestor} = resumenFilters();
-  const info = document.getElementById('rwInfo');
-  if(info){
-    info.textContent = 'Filtrado por ' +
-      (semana ? ('Semana '+semana) : 'todas las semanas') +
-      (vendedor ? (', Vendedor: '+vendedor) : '') +
-      (gestor ? (', Gestor: '+gestor) : '');
-  }
-}
-
-function exportResumenCSV(){
-  const R = computeResumen();
-  const rows = [['Gestor','Semana','A realizar','Realizadas','% Cobertura','Última llamada']]
-    .concat(R.resumenRows.map(r=>[r.gestor,r.semana,r.plan,r.done,r.cov,r.last]));
-  const csv = rows.map(r=>r.map(v=>{
-    const s = String(v??'');
-    return (/[",\n]/.test(s)) ? '"' + s.replace(/"/g,'""') + '"' : s;
-  }).join(',')).join('\\n');
-  const a=document.createElement('a');
-  a.href = URL.createObjectURL(new Blob([csv],{type:'text/csv;charset=utf-8;'}));
-  a.download = 'resumen_semanal.csv';
-  a.click();
-  URL.revokeObjectURL(a.href);
-}
-
-// Abrir / cerrar overlay de Resumen (Sem)
-function openResumenOverlay(){ document.body.classList.add('show-resumen'); renderResumenSem(); }
-function closeResumenOverlay(){ document.body.classList.remove('show-resumen'); }
-
-function wireResumenButtons(){
-  document.querySelectorAll('button#btnReporteResumen').forEach(btn=>{
-    btn.addEventListener('click', openResumenOverlay);
-  });
-  const b2 = document.getElementById('btnOpenResumenSem');
-  if(b2) b2.addEventListener('click', openResumenOverlay);
-  const volver = document.getElementById('rwVolver');
-  if(volver) volver.addEventListener('click', closeResumenOverlay);
-  ['rwSemana','rwVendedor','rwGestor'].forEach(id=>{
-    const el = document.getElementById(id);
-    if(el) el.addEventListener('change', renderResumenSem);
-  });
-  const exp = document.getElementById('rwExport');
-  if(exp) exp.addEventListener('click', exportResumenCSV);
-}
-
-(function(){
-  if(document.readyState === 'complete' || document.readyState === 'interactive'){
-    setTimeout(wireResumenButtons, 150);
-    setTimeout(ensureResumenFilters, 500);
-  }else{
-    document.addEventListener('DOMContentLoaded', ()=>{
-      setTimeout(wireResumenButtons, 150);
-      setTimeout(ensureResumenFilters, 500);
-    });
-  }
-})();
-
-
 </body>
 </html>
